Updated CMS 5.1.8 with a bugfix for the wave model.  The WCCG/WCCG_Inline routine was returning a divide by zero as part of an ATAN2 function call.  I added a small number to the denominator to prevent this.  This has also been applied in the latest developmental branch which will be 5.1.9.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ trunk/test/*
 trunk/Intel_vs2010/x64/Debug/
 
 trunk/Intel_vs2013/x64/Debug/
+*genmod.f90
+*.pdb
+/trunk/Intel_vs2013/Debug/BuildLog.htm
