Update to fix problem with 'heatflux.f90'  Switch from using hard coded WIN_OS compile time directive to a compiler implicit _WIN32 or other.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ trunk/Intel_vs2010/x64/Debug/
 
 trunk/Intel_vs2013/x64/Debug/
 /trunk/Intel_vs2013/x64/Release/BuildLog.htm
+*genmod.f90
+*.pdb
+*.htm
