--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ trunk/test/*
 mfiles/*
 lstf/*
 planar/
+junk
 benson_beach
+south_padre
 spike_run
 doc
 frf
@@ -23,7 +25,7 @@ cms_noswash
 do_not_git
 tar_bundle*
 brad_notes.*
-
+for*.png
 *.suo
 
 *.user
