--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ Intel_vs2017/x64/Release/
 *.htm
 
 *.dll
+
+Intel_vs2019/.vs/CMS2D_V5p2/v16/
+
+Intel_vs2019/x64/Release/
+
+Intel_vs2019/CMS2D_V5p2.u2d
+
+*.u2d
