--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ Intel_vs2019/.vs/CMS2D_V5p2/v16/
 *.exe
 
 vs2022/
+
+Intel_vs2019/enc_temp_folder/8aa3d7fbddc27b7df2ebc6c48d91841/
+
+Intel_vs2017/
