CShore to C2Shore change
- Changed all mentions of CSHORE to C2SHORE regardless of case with the exception of a few older card names.
- Enforced Waves and Flow to be present to use this Option for sediment transport.
- Added extra setup output for CSHORE parameters (and Watanabe which was missing).

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -181,6 +181,7 @@ SET( CMS_SOURCE_FILES
   ./utilities/math_test.F90
   ./utilities/time_lib.F90
   ./utilities/time_test.F90
+  ./utilities/tool_def.f90
   ./utilities/tools.F90
   ./utilities/unitconv_lib.F90
   ./utilities/watch_def.F90
