--- a/.gitignore
+++ b/.gitignore
@@ -46,28 +46,9 @@ Intel_vs2017/x64/Release/
 
 *.dll
 
-<<<<<<< HEAD
-Intel_vs2019/.vs/CMS2D_V5p2/v16/
-
 Intel_vs2019/x64/Release/
-
 Intel_vs2019/CMS2D_V5p2.u2d
-=======
 Intel_vs2019/x64/Debug/
-
 Intel_vs2019/x64/Release/
 
-Intel_vs2019/.vs/CMS2D_V5p2/v16/
->>>>>>> 5.2.7
-
-*.u2d
-
-*.exe
-
-vs2022/
-
-Intel_vs2019/enc_temp_folder/8aa3d7fbddc27b7df2ebc6c48d91841/
-
-Intel_vs2017/
-
-Intel_vs2019/.vs/cmake.db
+Intel_vs2019/.vs/
