--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Intel_vs2019/x64/Debug/
 Intel_vs2019/x64/Release/
 
 Intel_vs2019/.vs/
+
+Intel_vs2019/enc_temp_folder/e6486a49675cef3446d357a411a6d441/
