--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,9 +15,9 @@ sphinx:
   configuration: docs/conf.py
 
 # Optionally  build your docs in additional formats such as PDF and ePub
-# formats:
-#    - pdf
-#    - epub
+formats:
+   - pdf
+   - epub
 
 # Optional but recommended, declare the Python requirements Required
 # to build your documentation
