--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ GCTP/x64/
 Intel_vs2019/.vs/CMS2D_V5.3/v16/
 
 Intel_vs2019/.vs/
+
+Intel_vs2022/.vs/CMS2D_V5.3/v16/
+
+Intel_vs2022/.vs/CMS2D_V5.3/v17/
+
+Intel_vs2022/.vs/
