--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ cache:
 
 build:
   stage: build
+  image: GLR-ERDC
   artifacts:
     when: always
     expire_in: '18h' # 1 Hour is the minimum time
