Minor CMake change to test

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -241,14 +241,11 @@ INCLUDE_DIRECTORIES( main )
 ADD_EXECUTABLE( ${PROJECT_NAME} ${CMS_SOURCE_FILES} )
 
 # Link to XMDF
-FIND_LIBRARY( HDF5_LIB NAMES hdf5 PATHS ${CMAKE_SOURCE_DIR}/../external_libraries/HDF5 )
-FIND_LIBRARY( ZLIB_LIB NAMES z PATHS ${CMAKE_SOURCE_DIR}/../external_libraries/zlib )
+#FIND_LIBRARY( HDF5_LIB NAMES hdf5 PATHS ${CMAKE_SOURCE_DIR}/../external_libraries/HDF5 )
+#FIND_LIBRARY( ZLIB_LIB NAMES z PATHS ${CMAKE_SOURCE_DIR}/../external_libraries/zlib )
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
   PUBLIC
   XMDF
-  PRIVATE
-  ${HDF5_LIB}
-  ${ZLIB_LIB}
 )
 
 if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
